feat: 因为CSS是在一个独立的模块中require()进来，所以这里实现了CSS的热加载。调整页面结构

--- a/src/app/testbed/components/daily-details/daily-details.component.html
+++ b/src/app/testbed/components/daily-details/daily-details.component.html
@@ -1,77 +1,3 @@
-<div class="router-template">
-  <div class="clearfix">
-    <h2 class="info-title info-title-blue">每日报表</h2>
-  </div>
-
-  <div class="content">
-    <div class="content-head">
-      <span>8月23日焊装生产线——临海基地0000</span>
-    </div>
-
-    <div class="content-body">
-
-      <table border="1">
-        <thead>
-
-        </thead>
-        <tbody>
-        <tr>
-          <td rowspan="3">主焊OEE</td>
-          <td>8月目标</td>
-          <td colspan="2">83.2%</td>
-        </tr>
-        <tr>
-          <td></td>
-          <td>实际OEE</td>
-          <td colspan="2">86.8%</td>
-        </tr>
-        <tr>
-          <td></td>
-          <td>差异</td>
-          <td colspan="2">3.6%</td>
-        </tr>
-        <tr>
-          <td rowspan="4">工作时间</td>
-          <td></td>
-          <td>时间开动率</td>
-          <td>性能开动率</td>
-        </tr>
-        <tr>
-          <td></td>
-          <td>目标</td>
-          <td>93%</td>
-          <td>89.5%</td>
-        </tr>
-        <tr>
-          <td></td>
-          <td>实际</td>
-          <td>93%</td>
-          <td>89.5%</td>
-        </tr>
-        <tr>
-          <td></td>
-          <td>实际</td>
-          <td>93%</td>
-          <td>89.5%</td>
-        </tr>
-
-        </tbody>
-        <tfoot>
-        <tr>
-          <td></td>
-          <td></td>
-          <td></td>
-          <td></td>
-        </tr>
-        </tfoot>
-      </table>
-
-
-    </div>
-  </div>
-
-
-    <h1>000000</h1>
-
-
-</div>
+<h1>
+  Hello World 00!
+</h1>
